--- a/MyProgress/.prettierrc
+++ b/MyProgress/.prettierrc
@@ -1,5 +1,10 @@
 {
   "semi": false,
   "tabWidth": 2,
-  "singleQuote": true
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ],
+  "pluginSearchDirs": false,
 }
